# stitching_with_cuda

./: CMakeLists.txt  CudaTimer.cuh  GenericDebugger.cmake  GenericDebugger.txt  Matrix.cu  Matrix.h  README.md  cpuFeatureMatcher.h  cudaFeatureMatcher.cu  feature_matching.cpp  gpuFeatureMatcher.cu  gpuFeatureMatcher.cuh  hello_world.cpp  openCVFeatureMatcher.cpp  submitToSlurm.sh  testMatrix.cu  timeCPUFeatureMatcher.cu  timeCPUFeatureMatcher.out  timeGPUFeatureMatcher.cu  tryCPUFeatureMatcher.cu  tryGPUFeatureMatcher.cu
samples/: CMakeLists.txt  feature_matching.cpp  stitching.cpp
scripts/: plot.py  xml_to_sqlite_connection.py
testMatrix/: CMakeLists.txt  submitToSlurm.sh  testMatrix.cu
testUnifiedMemory/: CMakeLists.txt  submitToSlurm.sh  testUnifiedMemory  testUnifiedMemory.cu
timingFiles/: 88878.stdout  cpu.stdout  gpuCoalesced.stdout  gpuOccupancy.stdout  gpuShmem.stdout  gpuSpaceOptimized.stdout
tryMatrix/: CMakeLists.txt  submitToSlurm.sh  testMatrix.cu  tryMatrix.cu
tryMemoryAllocationError/: CMakeLists.txt  submitToSlurm.sh  tryMemoryAllocationError.cu
tryUnifiedMemory/: testUnifiedMemory.cu
util/: 2Dconvolution.cu  2Dconvolution.h  CMakeLists.txt  CudaTimer.cuh  Matrix.cu  Matrix.h  submitToSlurm.sh  testMatrix.cu
